--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#ff0a88">
+        <meta property="og:type" content="website">
+        <meta property="og:description" content="simple discord rna download tool">
+        <meta property="og:title" content="switchboard">
         <link rel="stylesheet" href="index.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
