--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta property="og:type" content="website">
         <meta property="og:description" content="simple discord rna download tool">
         <meta property="og:title" content="switchboard">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="index.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
