[Main] Neat progress bars

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                     <option value="alpha">latest alpha</option>
                 </select>
 
-                <input type="button" id="download-button" value="download">
+                <button id="download-button">
+                    <span id="download-status">download</span>
+                    <span id="download-bar" style="display: none;"></span>
+                </button>
             </section>
             <footer>
                 <p>made with ❤ by marsh</p>
