main: update accent colour

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" content="#3a438e">
+        <meta name="theme-color" content="#fed143">
         <meta property="og:type" content="website">
         <meta property="og:description" content="simple discord rna download tool">
         <meta property="og:title" content="switchboard">
