--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" content="#fed143">
-        <meta property="og:type" content="website">
-        <meta property="og:description" content="simple discord rna download tool">
-        <meta property="og:title" content="switchboard">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="index.css" />
-        <title>switchboard</title>
-    </head>
-    <body>
-        <main>
-            <header>
-                <h1>switchboard</h1>
-                <p>simple discord rna download tool</p>
-            </header>
-            <hr>
-            <section>
-                <label for="version-input">version string (e.g. 226201)</label>
-                <input type="text" id="version-input" name="version-input">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="theme-color" content="#fed143">
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="simple discord rna download tool">
+		<meta property="og:title" content="switchboard">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="stylesheet" href="index.css" />
+		<title>switchboard</title>
+	</head>
+	<body>
+		<main>
+			<header>
+				<h1>switchboard</h1>
+				<p>simple discord rna download tool</p>
+			</header>
+			<hr>
+			<section>
+				<label for="version-input">version string (e.g. 226201)</label>
+				<input type="text" id="version-input" name="version-input">
 
-                <label for="version-select">presets</label>
-                <select id="version-select" name="version-select">
-                    <option value="stable">latest stable</option>
-                    <option value="beta">latest beta</option>
-                    <option value="alpha">latest alpha</option>
-                </select>
+				<label for="version-select">presets</label>
+				<select id="version-select" name="version-select">
+					<option value="stable">latest stable</option>
+					<option value="beta">latest beta</option>
+					<option value="alpha">latest alpha</option>
+				</select>
 
-                <button id="download-button">
-                    <span id="download-status">download</span>
-                    <span id="download-bar" style="display: none;"></span>
-                </button>
-            </section>
-            <footer>
-                <p>made with ❤ by marsh</p>
-            </footer>
-        </main>
+				<button id="download-button">
+					<span id="download-status">download</span>
+					<span id="download-bar" style="display: none"></span>
+				</button>
+			</section>
+			<footer>
+				<p>made with ❤ by marsh</p>
+			</footer>
+		</main>
 
-        <!-- script in body because i didn't want to deal with DOMContentLoaded -->
-        <script type="module" src="index.js"></script>
-    </body>
+		<!-- script in body because i didn't want to deal with DOMContentLoaded -->
+		<script type="module" src="index.js"></script>
+	</body>
 </html>
